@@ -34,6 +34,7 @@ Whether we like to admit it or not, we are all influenced by brands. Brands are 
 - WooCommerce REST API support
 - WooCommerce built-in product importer/exporter support (WooCommerce 3.1.0+)
 - Brand tab for single product page
+- Favorite brands
 - And much more!
 
 **Pull request are welcome :)**
