@@ -1,7 +1,9 @@
 == Changelog ==
 = 1.6.1 =
 * Feature: Favorite brands
+* Fix: Coupons brands restriction (thanks @josk79)
 * Fix: Import products fixes
+* Fix: PHP7 warning on 'class-perfect-woocommerce-brands.php'
 * Enhancement: Filter by brand widget enhancements
 * Enhancement: Carousels enhancements
 * Enhancement: JS and CSS minified
